kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
spec:
  rules:
    - host: "auth-cert.zgamelogic.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 8080
  tls:
    - hosts:
        - "auth-cert.zgamelogic.com"
      secretName: ingress-tls
